table_3/results/Table-wrapper-csv-impl-pre-nullaway-ann.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-ann-pre/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvTableFactory.java:25: error: cannot find symbol
import org.spacious_team.table_wrapper.api.TableColumnDescription;
                                          ^
  symbol:   class TableColumnDescription
  location: package org.spacious_team.table_wrapper.api
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-ann-pre/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvTableFactory.java:38: error: cannot find symbol
                        Class<? extends TableColumnDescription> headerDescription,
                                        ^
  symbol:   class TableColumnDescription
  location: class CsvTableFactory
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-ann-pre/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvTable.java:29: error: cannot find symbol
import org.spacious_team.table_wrapper.api.TableColumnDescription;
                                          ^
  symbol:   class TableColumnDescription
  location: package org.spacious_team.table_wrapper.api
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-ann-pre/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvTable.java:40: error: cannot find symbol
                       Class<? extends TableColumnDescription> headerDescription,
                                       ^
  symbol:   class TableColumnDescription
  location: class CsvTable
4 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 507ms
4
